manifests/homelab/health-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-dashboard
  labels:
    app: health-dashboard
spec:
  selector:
    matchLabels:
      app: health-dashboard
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /__/metrics
        prometheus.io/port: '8081'
        health.dsb.dev/scrape: 'true'
      labels:
        app: health-dashboard
    spec:
      serviceAccountName: health-dashboard
      automountServiceAccountToken: true
      imagePullSecrets:
      - name: registry
      containers:
      - image: ghcr.io/davidsbond/homelab:latest
        name: health-dashboard
        command:
        - /bin/health-dashboard
        readinessProbe:
          httpGet:
            path: /__/health
            port: 8081
          initialDelaySeconds: 5
